# DeepDock

./: .gitignore  .gitmodules  Makefile  pyproject.toml
Validation_Docking/: Docking_CASF2016_CoreSet.ipynb  Docking_TestSet.ipynb
data/: get_lit-pcba.sh
deepdock/: prep_target.py
examples/: Docking_example.ipynb  Score_example.ipynb
